// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection variable components Serialization Saving: Collection with collection variable component ( no grandchildren ) 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "id": "cmp-coll-item-child-1",
          },
          "type": "default",
        },
        {
          "attributes": {
            "id": "cmp-coll-item-child",
          },
          "dataResolver": {
            "collectionId": "my_collection",
            "path": "user",
            "variableType": "currentItem",
          },
          "type": "data-variable",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 2,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Saving: Collection with collection variable component ( with grandchildren ) 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "id": "cmp-coll-item-child-1",
          },
          "components": [
            {
              "attributes": {
                "id": "cmp-var",
              },
              "dataResolver": {
                "collectionId": "my_collection",
                "path": "user",
                "variableType": "currentIndex",
              },
              "type": "data-variable",
            },
          ],
          "type": "default",
        },
        {
          "attributes": {
            "id": "cmp-coll-item-child",
          },
          "dataResolver": {
            "collectionId": "my_collection",
            "path": "user",
            "variableType": "currentItem",
          },
          "type": "data-variable",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 2,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Serializion to JSON: Collection with collection variable component ( no grandchildren ) 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "id": "cmp-coll-item-child-1",
          },
          "type": "default",
        },
        {
          "attributes": {
            "id": "cmp-coll-item-child",
          },
          "dataResolver": {
            "collectionId": "my_collection",
            "path": "user",
            "variableType": "currentItem",
          },
          "type": "data-variable",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 2,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;

exports[`Collection variable components Serialization Serializion to JSON: Collection with collection variable component ( with grandchildren ) 1`] = `
{
  "attributes": {
    "id": "cmp-coll",
  },
  "components": [
    {
      "attributes": {
        "id": "cmp-coll-item",
      },
      "components": [
        {
          "attributes": {
            "id": "cmp-coll-item-child-1",
          },
          "components": [
            {
              "attributes": {
                "id": "cmp-var",
              },
              "dataResolver": {
                "collectionId": "my_collection",
                "path": "user",
                "variableType": "currentIndex",
              },
              "type": "data-variable",
            },
          ],
          "type": "default",
        },
        {
          "attributes": {
            "id": "cmp-coll-item-child",
          },
          "dataResolver": {
            "collectionId": "my_collection",
            "path": "user",
            "variableType": "currentItem",
          },
          "type": "data-variable",
        },
      ],
      "type": "data-collection-item",
    },
  ],
  "dataResolver": {
    "collectionId": "my_collection",
    "dataSource": {
      "path": "my_data_source_id",
      "type": "data-variable",
    },
    "endIndex": 2,
    "startIndex": 0,
  },
  "type": "data-collection",
}
`;
